force-app/main/default/objects/Test_Results__c/Test_Results__c.object-meta.xml
<CustomObject>
    <label>Test Results</label>
    <nameField>
        <label>Test Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>