force-app/main/default/objects/Test_Results__c/fields/Attribution_Test__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Test__c</fullName>
    <label>Attribution Test</label>
    <referenceTo>Attribution_Test__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>