force-app/main/default/objects/Test_Results__c/fields/Effect_Size__c.field-meta.xml
<CustomField>
    <fullName>Effect_Size__c</fullName>
    <label>Effect Size</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>