force-app/main/default/objects/Test_Results__c/fields/Improvement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Percentage__c</fullName>
    <label>Improvement Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>