force-app/main/default/objects/Test_Results__c/fields/Model_B_Performance__c.field-meta.xml
<CustomField>
    <fullName>Model_B_Performance__c</fullName>
    <label>Model B Performance</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>