force-app/main/default/objects/Test_Results__c/fields/P_Value__c.field-meta.xml
<CustomField>
    <fullName>P_Value__c</fullName>
    <label>P Value</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>