force-app/main/default/objects/Test_Results__c/fields/Practical_Significance__c.field-meta.xml
<CustomField>
    <fullName>Practical_Significance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practical Significance</label>
    <type>Checkbox</type>
</CustomField>