force-app/main/default/objects/Test_Results__c/fields/Significant__c.field-meta.xml
<CustomField>
    <fullName>Significant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Significant</label>
    <type>Checkbox</type>
</CustomField>