force-app/main/default/objects/Test_Results__c/fields/Test_Statistic__c.field-meta.xml
<CustomField>
    <fullName>Test_Statistic__c</fullName>
    <label>Test Statistic</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>