force-app/main/default/objects/Test_Results__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T_Test</fullName>
                <label>T Test</label>
            </value>
            <value>
                <fullName>Chi_Square</fullName>
                <label>Chi Square</label>
            </value>
            <value>
                <fullName>Mann_Whitney_U</fullName>
                <label>Mann Whitney U</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>